# aperture

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  aperture.sample.cfg  appveyor.yml  build.cmd  build.sh  conanfile.txt
aperture/: AppLog.cpp  AppLog.h  Asset.cpp  Asset.h  AssetServer.cpp  AssetServer.h  AssetSizeCalculator.h  AuthChallengeMsg.cpp  AuthChallengeMsg.h  AuthResponseMsg.cpp  AuthResponseMsg.h  AuthStatusMsg.cpp  AuthStatusMsg.h  ClientRequestMsg.cpp  ClientRequestMsg.h  CloudFilesAsset.cpp  CloudFilesAsset.h  CloudFilesConnector.cpp  CloudFilesConnector.h  CloudFilesGetWorker.cpp  CloudFilesGetWorker.h  Finally.h  HttpRequestHandler.cpp  HttpRequestHandler.h  IAsset.cpp  IAsset.h  IAssetServer.cpp  IAssetServer.h  RackspaceAuthorizer.cpp  RackspaceAuthorizer.h  SHA1.cpp  ServerResponseMsg.cpp  ServerResponseMsg.h  Settings.cpp  Settings.h  TokenBucket.cpp  TokenBucket.h  Validator.cpp  Version.h  WhipURI.cpp  (+19 more)
cmake/: CMakeLists.txt  PrecompiledHeader.cmake
protoinclude/: StratusAsset.proto  bcl.proto
